--- a/requirements.yml
+++ b/requirements.yml
@@ -13,5 +13,7 @@ dependencies:
   - biopython=1.84
   - datasketch=1.6.5
   - seaborn=0.13.2
+  - pymol-open-source=3.0.0
+  - vina=1.2.5
   - pip:
     - rcsbsearchapi==1.6.0
